--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -97,3 +97,41 @@ background: url("../img/header-bg.jpg") no-repeat center top;
     letter-spacing: 2px;
     text-transform: uppercase;
 }
+
+.content {
+    padding-top: 35px;
+}
+
+.content h4 {
+    font-size: 26px;
+}
+
+.tilt {
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    transition: 0.5s ease;
+}
+
+.tilt:hover {
+    -webkit-transform: rotate(-10deg);
+    -moz-transform: rotate(-10deg);
+    -o-transform: rotate(-10deg);
+    -ms-transform: rotate(-10deg);
+    transform: rotate(-10deg);
+}
+
+.tilt img {
+    width:350px;
+}
+
+#portfolio {
+    background: #e0e0e0;
+    padding-top: 70px;
+    text-align: center;
+}
+#portfolio h4 {
+    font-size: 40px;
+}
+
